# rag-candidate-system

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.backend.txt  requirements.frontend.txt  requirements.txt
.github/workflows/: tests.yml
app/: main.py
app/api/: dependencies.py
app/core/: README.md  __init__.py  cache.py  config.py
app/middleware/: README.md  rate_limit.py
app/routers/: __init__.py  cache.py  candidates.py  cvs.py  queries.py
app/schemas/: cache.py  candidates.py
app/services/: onboarding.py  parser.py  pipeline.py
data/: candidates_pool.csv
evaluation/: README.md  __init__.py  generate_report.py  metrics.py  run_evaluation.py  test_queries.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  ui.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/[...path]/: route.ts
frontend/src/app/onboard/: page.tsx
frontend/src/components/: CandidateCard.tsx  Field.tsx  Nav.tsx  RelevanceMeter.tsx
frontend/src/lib/: api.ts  format.ts  types.ts
rag/: build_embeddings.py  onboarding_graph.py  reranker.py  retriever.py
rag/agents/: query_expansion_agent.py  summary_agent.py
rag/embedding/: embedder.py
rag/vector_store/: faiss_store.py
scripts/: migrate_csv.py
tests/: conftest.py  test_cache_redis.py  test_parser.py  test_query_expansion.py  test_rate_limiting_redis.py
