[project]
name = "rag-candidate-system"
version = "0.1.0"
description = "AI recruitment assistant with RAG, candidate onboarding, semantic search, reranking, and evaluation tooling."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.123.10",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.5",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pypdf>=6.4.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "redis>=5.0.0",
    "sentence-transformers>=5.2.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
evaluation = [
    "faiss-cpu>=1.7.4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pre-commit>=4.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.31.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "evaluation/results",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]
ignore = [
    "B008",
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = [
    "app",
    "evaluation",
    "rag",
    "scripts",
]

[tool.mypy]
python_version = "3.11"
plugins = [
    "pydantic.mypy",
]
exclude = [
    ".venv",
    "evaluation/results",
]
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
